--- a/testingapp/android/app/src/main/AndroidManifest.xml
+++ b/testingapp/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.testingapp">
+    package="testing.app">
    <application
         android:label="testingapp"
         android:icon="@mipmap/ic_launcher">
