connect to firebase and register an user

--- a/testingapp/pubspec.yaml
+++ b/testingapp/pubspec.yaml
@@ -1,4 +1,4 @@
-name: testingapp
+name: testing
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -23,6 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_auth: "^1.4.1"
+  firebase_core: "^1.3.0"
+
 
 
   # The following adds the Cupertino Icons font to your application.
