--- a/testingapp/android/app/src/debug/AndroidManifest.xml
+++ b/testingapp/android/app/src/debug/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="testing.app">
+    package="com.example.testing">
     <!-- Flutter needs it to communicate with the running application
          to allow setting breakpoints, to provide hot reload, etc.
     -->
