--- a/testingapp/android/app/src/main/AndroidManifest.xml
+++ b/testingapp/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="testing.app">
+    package="com.example.testing">
    <application
-        android:label="testingapp"
+        android:label="testing"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
